panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__preprocessor__test_parsing_function_like_macros.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/preprocessor/test_parsing_function_like_macros.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/preprocessor/test_parsing_function_like_macros.c"
   (function-definition external stack-size=8
      (main~0 `fn() -> int` (static main))
      (compound-statement)))

----- stderr -----
